Fix the broken image alignment of the "text below image" option.

--- a/styles/scss/dashboard.scss
+++ b/styles/scss/dashboard.scss
@@ -105,6 +105,7 @@
 
             &.text-below {
               img {
+                margin: 0 auto;
                 width: 50px;
               }
 
